# bayes_hfs

./: .readthedocs.yaml  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
bayes_hfs/: __init__.py  _version.py  hfs_model.py  hfs_ratio_model.py  physics.py  utils.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/notebooks/: metadata_OH.pkl  mol_data_12CN.pkl  mol_data_13CN.pkl  mol_data_OH.pkl  mol_metadata_12CN.pkl  mol_metadata_13CN.pkl  optimization.ipynb
tests/: test_hfs_model.py  test_hfs_ratio_model.py  test_physics.py  test_utils.py
